--- a/style.css
+++ b/style.css
@@ -5,9 +5,18 @@
   box-sizing: border-box;
   font-family: "Spartan", sans-serif;
 }
-
+@keyframes show
+{
+from{opacity:0;}
+to{opacity:1;}
+}
 html {
   scroll-behavior: smooth;
+
+
+  opacity:1;
+  animation: show 1s linear;
+
 }
 
 /* Global Styles */
